# alif

./: .gitignore  CHANGELOG.md  CLAUDE.md  IDEAS.md  OVERVIEW.md  PITCH.md  README.md  SETUP.md  docker-compose.yml  duolingo.txt  initial_idea.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/data/: benchmark_results_20260208_132428.json  decomposition_step4c_progress.json  kalila_dove.footnotes.html  kalila_dove.json  kalila_dove.txt  kalila_dove.vocalized.txt
backend/experiments/: eval_comprehensibility.py  passage_prompt_eval.py
backend/scripts/: analyze_intro_experiment.py  analyze_passage_efficacy.py  analyze_progress.py  analyze_quran_freq_mapping.py  analyze_sentence_quality.py  analyze_word_distribution.py  apply_quran_inflected_cleanup_2026_05_15.py  apply_step4a_link_survivors.py  apply_step4a_regate_deletions.py  apply_step4c_link_survivors.py  apply_step4c_tags.py  audit_function_proper_words.py  audit_llm_usage.py  audit_quran_dagger_alef.py  audit_sentences_claude.py  audit_variants.py  backfill_decomposition_orphan_canonicals.py  backfill_diacritics.py  backfill_empty_glosses.py  backfill_etymology.py  backfill_examples.py  backfill_expanded_forms.py  backfill_forms.py  backfill_forms_llm.py  backfill_forms_translit.py  backfill_frequency.py  backfill_function_word_lemmas.py  backfill_lemma_grammar.py  backfill_memory_hooks.py  backfill_pattern_enrichment.py  backfill_punctuation.py  backfill_root_enrichment.py  backfill_root_meanings.py  backfill_roots.py  backfill_samer.py  backfill_sentence_translit.py  backfill_story_proper_nouns.py  backfill_story_words.py  backfill_themes.py  backfill_transliteration.py  (+110 more)
backend/tests/: conftest.py  test_acquiring_material_rescue.py  test_acquisition.py  test_acquisition_service.py  test_analytics.py  test_api.py  test_bare_shape_check.py  test_book_import.py  test_cap_enforcement_deficit_guard.py  test_chat.py  test_chimera_audit.py  test_cohort.py  (+76 more)
polyglot/: .gitignore  CLAUDE.md  DESIGN.md  NEXT_SESSION.md  README.md  pyproject.toml
(+616 files in other folders)
