[project]
name = "alif-backend"
version = "0.1.0"
description = "Alif Arabic Learning App - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "fsrs>=4.0.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "camel-tools>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
