[project]
name = "polyglot-backend"
version = "0.1.0"
description = "Polyglot reading-comprehension trainer — Modern Greek, Ancient Greek, Latin (sister app to Alif)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "fsrs>=6.0.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.0",
    "simplemma>=1.1.0",     # lemmatizer for Modern Greek + Latin (and others)
]

[project.optional-dependencies]
# Per-language NLP toolkits installed on demand. GR-NLP-TOOLKIT pulls torch +
# transformers (~3 GB); OdyCy and LatinCy are smaller spaCy pipelines. Keep them
# off the base install so polyglot stays lean for dev work that doesn't need them.
el = ["gr-nlp-toolkit>=0.2.0"]
grc = ["spacy>=3.7.0"]  # OdyCy model loaded at runtime from HuggingFace
la = ["spacy>=3.7.0"]   # LatinCy model loaded at runtime from HuggingFace
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "freezegun>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that make real LLM/model calls (run with: pytest -m slow)",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
